--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/dashboardFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="androidsamples.java.tictactoe.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/loginFragment"
+        android:name="androidsamples.java.tictactoe.LoginFragment"
+        android:label="@string/login_fragment_label"
+        tools:layout="@layout/fragment_login">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_loginFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="androidsamples.java.tictactoe.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
+        android:id="@+id/gameFragment"
+        android:name="androidsamples.java.tictactoe.GameFragment"
+        android:label="@string/game_fragment_label"
+        tools:layout="@layout/fragment_game"/>
+    <fragment
+        android:id="@+id/dashboardFragment"
+        android:name="androidsamples.java.tictactoe.DashboardFragment"
+        android:label="fragment_item_list"
+        tools:layout="@layout/fragment_dashboard" >
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_dashboardFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
